welcome.lessons.welcome.bat.bool1.IcyHot.scala.error
icyHot:2: error: not found: value a
	if (a< 0 && b> 100)
            ^icyHot:4: error: not found: value a
	if (a>100 && b<0)
            ^