welcome.lessons.welcome.bat.bool1.IcyHot.scala.code
def icyHot(temp1:Int, temp2:Int):Boolean = {
	if (a< 0 && b> 100)
	return true
	if (a>100 && b<0)
	return true 
	else return false
}
